--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "target": "ES5",
         "outDir": "dist",
-        "rootDir": "src"
+        "rootDir": "src",
+        "strictNullChecks": true
     }
 }
