--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.1.4"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.48",
+    "lodash": "^4.17.4"
   }
 }
