TS Configuration Changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "outDir": "dist",
         "rootDir": "src",
         "strictNullChecks": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "sourceMap": true
     }
 }
