--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "express": "^4.14.0",
+    "human-readable-ids": "^1.0.1",
     "lodash": "^4.17.4",
     "pg": "^6.1.2",
     "sequelize": "^3.29.0"
