--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "es6": "concurrently --kill-others \"tsc -w\" \"lite-server\"",
     "types": "node dist/types.js",
     "oop": "ts-node src/oop.ts",
-    "generics": "ts-node src/generics.ts"
+    "generics": "ts-node src/generics.ts",
+    "decorators": "ts-node src/decorators.ts"
   },
   "repository": {
     "type": "git",
