--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
         "rootDir": "src",
         "strictNullChecks": true,
         "noImplicitAny": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     }
 }
