--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/gdlm91/au-typescript#readme",
   "devDependencies": {
+    "@types/bluebird": "^3.0.37",
+    "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
     "@types/node": "^7.0.0",
     "@types/sequelize": "^4.0.39",
@@ -34,7 +36,7 @@
     "typescript": "^2.1.4"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "human-readable-ids": "^1.0.1",
     "lodash": "^4.17.4",
